--- a/style.css
+++ b/style.css
@@ -1,35 +1,33 @@
-/* Style the navigation menu */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: relative;
+body,
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
-  display: none;
+/* NAVBAR STYLING */
+
+#main-nav,
+#main-nav h2 {
+  padding: 16px 0;
+  font-size: 2.5rem;
 }
 
-/* Style navigation menu links */
-.topnav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
+#main-nav i {
+  font-size: 2.5rem;
 }
 
-/* Style the hamburger menu */
-.topnav a.icon {
-  background: black;
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
+#main-nav h2 {
+  font-weight: 400;
 }
 
-/* Add a grey background color on mouse-over */
-.topnav a:hover {
-  background-color: #ddd;
+#main-nav i {
   color: black;
+  padding-left: 1.2rem;
+}
+
+/* FOOD MENU SECTION */
+
+.food-list {
+  display: ;
 }
