--- a/style.css
+++ b/style.css
@@ -3,31 +3,61 @@ body,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: serif;
 }
 
 /* NAVBAR STYLING */
 
+#main-nav {
+  position: fixed;
+  height: 75px;
+  width: 100%;
+  display: inline-block;
+  background-color: #fff;
+}
+
 #main-nav,
-#main-nav h2 {
+#main-nav h2,
+#main-nav i {
   padding: 16px 0;
-  font-size: 2.5rem;
+  font-size: 1.1rem;
 }
 
 #main-nav i {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 #main-nav h2 {
   font-weight: 400;
+  font-size: 1.5rem;
 }
 
 #main-nav i {
   color: black;
-  padding-left: 1.2rem;
 }
 
 /* FOOD MENU SECTION */
 
+.food-items:nth-child(1) {
+  padding-top: 9rem;
+}
+.food-items:nth-child(2) {
+  padding-top: 9rem;
+}
+.food-items:nth-child(3) {
+  padding-top: 9rem;
+}
+.food-items:nth-child(4) {
+  padding-top: 9rem;
+}
+
 .food-list {
-  display: ;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 2rem;
+  grid-column-gap: 1.1rem;
+}
+
+.food-list img {
+  width: 100%;
 }
