--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body,
   position: fixed;
   height: 75px;
   width: 100%;
-  display: inline-block;
   background-color: #fff;
 }
 
@@ -34,6 +33,14 @@ body,
 
 #main-nav i {
   color: black;
+}
+
+#main-nav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
 }
 
 /* FOOD MENU SECTION */
@@ -60,4 +67,20 @@ body,
 
 .food-list img {
   width: 100%;
+}
+
+#food-menu .food-name {
+  text-align: center;
+  padding: 0.5rem 0;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+}
+
+#food-menu .food-description {
+  text-align: center;
+}
+
+#myLinks {
+  display: none;
 }
